<resources>
    <string name="app_name">#tourism</string>
    <string name="a">More On The Web</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">New Button</string>
    <string name="delhi">Delhi</string>
    <string name="Up">Uttar Pradesh</string>
    <string name="tn">Tamil Nadu</string>
    <string name="maha">Maharastra</string>
    <string name="ap">Andhra Pradesh</string>
    <string name="kannada">karnataka</string>
    <string name="dham">Four Dhams</string>
    <string name="an">Andaman and Nicobar Islands</string>
    <string name="hp">Himachal Pradesh</string>
    <string name="jk">Jammu And Kashmir</string>
    <string name="bihar">Bihar</string>
    <string name="Raj">Rajasthan</string>
    <string name="goa">Goa</string>
    <string name="kerela">Kerela</string>
    <string name="title_activity_maharastra">Maharastra</string>
    <string name="title_activity_delhi">Delhi</string>
    <string name="title_activity_hp">Hp</string>
    <string name="title_activity_bihar">Bihar</string>
    <string name="title_activity_goa">Goa</string>
    <string name="title_activity_jammu">Jammu</string>
    <string name="title_activity_kerela">Kerela</string>
    <string name="title_activity_tamil_nadu">TamilNadu</string>
    <string name="title_activity_uttar_pradesh">UttarPradesh</string>
    <string name="title_activity_karnataka">Karnataka</string>
    <string name="title_activity_rajasthan">Rajasthan</string>
    <string name="title_activity_four_dhams">FourDhams</string>
    <string name="title_activity_andhra">Andhra</string>
    <string name="title_activity_andaman">Andaman And Nicobar Islands</string>
    <string name="title_activity_taj">Taj</string>
    <string name="title_activity_banaras_ghat">BanarasGhat</string>
    <string name="title_activity_akshardham">Akshardham</string>
    <string name="title_activity_red_fort">RedFort</string>
    <string name="title_activity_qutab">Qutab</string>
    <string name="title_activity_india_gate">IndiaGate</string>
    <string name="title_activity_guru">Guru</string>
    <string name="title_activity_men">Men</string>
    <string name="title_activity_bri">Bri</string>
    <string name="title_activity_ram">Ram</string>
    <string name="title_activity_nilgiri">Nilgiri</string>
    <string name="title_activity_vivek">Vivek</string>
    <string name="title_activity_jodhpur">Jodhpur</string>
    <string name="title_activity_bikanaer">Bikanaer</string>
    <string name="title_activity_jaipur">Jaipur</string>
    <string name="title_activity_udai_pur">UdaiPur</string>
    <string name="title_activity_jaiselmaer">Jaiselmaer</string>
    <string name="title_activity_lakshmi">Lakshmi</string>
    <string name="title_activity_elephanta_caves">ElephantaCaves</string>
    <string name="title_activity_gateway_of_india">GatewayOfIndia</string>
    <string name="title_activity_siddhivinayak">Siddhivinayak</string>
    <string name="title_activity_taj_hotel">TajHotel</string>
</resources>
